[package]

name = "polygon"
version = "0.1.0"
authors = ["David LeGare <excaliburhissheath@gmail.com>"]

[dependencies]
bmp = "0.3"
gl-util = { path = "./gl-util" }
image = "0.15"
polygon-math = { path = "./polygon-math" }
polygon-material = { path = "./polygon-material" }

[dev_dependencies]
obj-rs = "0.4"
winit = "0.7"
gl-winit = { path = "./gl-winit" }
